[package]
name = "rusttest"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
simplelog = { version = "^0.12.2", features = ["paris"] }
chrono = "0.4"
time = {version = "0.3", features = ["local-offset"] }
toml = "0.8.15"
serde = { version = "1.0", features = ["derive"] }
zip = "0.5.0"
walkdir = "2.3"
filetime = "0.2"