[package]
name = "LogRC"
version = "1.0.0"
edition = "2021"

[lib]
name = "log_rc"
path = "src/lib.rs"

[[bin]]
name = "LogRC"
path = "src/main.rs"

[dependencies]
log = "0.4"
simplelog = { version = "^0.12.2", features = ["paris"] }
chrono = "0.4"
time = {version = "0.3", features = ["local-offset"] }
toml = "0.8.15"
serde = { version = "1.0", features = ["derive"] }
zip = "2.1.6"
walkdir = "2.3"
filetime = "0.2"

[build-dependencies]
winresource = "0.1.17"

[package.metadata.winresource]
OriginalFilename = "LogRetentionandCompression"
FileDescription = "Log Retention and Compression."
LegalCopyright = "Copyright © 2077"
ProductName = "LogRetentionandCompression"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"